--- a/.sops.yaml
+++ b/.sops.yaml
@@ -26,6 +26,14 @@ creation_rules:
         - *admin_mini-nix
         - *admin_workstation
         - *server_mini-nix
+
+  - path_regex: secrets/thepodfather/[^/]+\.(yaml|json|env|ini)$
+    key_groups:
+      - age:
+        - *admin_mini-nix
+        - *admin_workstation
+        - *server_thepodfather
+
   - path_regex: secrets/tailscale/eric\.yaml
     key_groups:
     - age:
