--- a/.sops.yaml
+++ b/.sops.yaml
@@ -27,6 +27,14 @@ creation_rules:
         - *admin_workstation
         - *server_mini-nix
 
+  - path_regex: secrets/headscale/[^/]+\.(yaml|json|env|ini)$
+    key_groups:
+      - age:
+        - *admin_mini-nix
+        - *admin_workstation
+        - *server_headscale
+
+
   - path_regex: secrets/thepodfather/[^/]+\.(yaml|json|env|ini)$
     key_groups:
       - age:
